# intellicenter

./: .gitignore  .pre-commit-config.yaml  ANALYSIS.md  BRONZE_COMPLIANCE.md  CLAUDE.md  Makefile  QUALITY_SCALE_COMPLIANCE.md  QUALITY_SCALE_IMPROVEMENTS.md  README.md  VALIDATION.md  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt
.github/workflows/: README.md  bronze-validation.yml  ci.yaml  claude.yml  home-assistant-validation.yml  quality-scale.yaml  quality-validation.yml
custom_components/intellicenter/: __init__.py  binary_sensor.py  config_flow.py  cover.py  diagnostics.py  light.py  manifest.json  number.py  sensor.py  strings.json  switch.py  water_heater.py
custom_components/intellicenter/pyintellicenter/: __init__.py  controller.py  model.py  protocol.py
custom_components/intellicenter/translations/: en.json
docs/: explore_valves.py  valve_objects.json
scripts/: README.md  validate_quality_scale.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_controller.py  test_init.py  test_light.py  test_model.py  test_protocol.py  test_sensor.py  test_switch.py
